# apply-inovelli-defaults

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  deny.toml
.github/workflows/: ci.yml
apply-inovelli-defaults/: Cargo.toml
apply-inovelli-defaults/resources/test/config/: invalid_format.yaml  valid.yaml
apply-inovelli-defaults/src/: config.rs  init_messages.rs  lib.rs  main.rs  messages.rs
examples/: group-defaults.yaml  inovelli-dimmers.yaml
